<resources>
    <string name="app_name">DMT22114 Assignment 1</string>
    <string name="title">Temperature Converter</string>
    <string name="background">Background</string>
    <string name="entertext">Enter a temperature</string>
    <string name="defaultresult">0.0</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>

    <string-array name="option_array">
        <item>Celsius to Fahrenheit</item>
        <item>Celsius to Kelvin</item>
        <item>Kelvin to Fahrenheit</item>
        <item>Kelvin to Celsius</item>
        <item>Fahrenheit to Celsius</item>
        <item>Fahrenheit to Kelvin</item>
    </string-array>

</resources>