<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/VerLayTop1"
        android:fontFamily="sans-serif-light"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/textSize1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/VerLayTop2"
        android:gravity="center|top|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/showresult"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/VerLayTop3"
            android:layout_marginBottom="@dimen/VerLayBottom1"
            android:text="@string/defaultresult"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/textSize3" />

        <EditText
            android:id="@+id/input"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints="@string/entertext"
            android:hint="@string/entertext"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/textSize2"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Spinner
            android:id="@+id/selection"
            android:layout_width="275dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/VerLayTop1"
            android:entries="@array/option_array"
            android:popupBackground="@color/cardview_dark_background" />

        <Button
            android:id="@+id/buttonConvert"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/VerLayTop5"
            android:backgroundTint="@android:color/holo_green_dark"
            android:fontFamily="sans-serif-light"
            android:text="@string/convert"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:rippleColor="#A59999" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/VerLayTop4"
            android:backgroundTint="@android:color/holo_red_light"
            android:fontFamily="sans-serif-light"
            android:text="@string/clear"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>